{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 44,
  "lineage": "6d9b90bc-f547-00db-13ea-b78f5498887c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/rustymaintenance/regions/us-central1/networkEndpointGroups/rmm-ui-service-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-11-10T10:39:52.849-08:00",
            "description": "Backend service for rmm-ui-service",
            "enable_cdn": false,
            "fingerprint": "iEcQFPM3mLI=",
            "generated_id": 720973893656874903,
            "id": "projects/rustymaintenance/global/backendServices/rmm-ui-service-backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "rmm-ui-service-backend",
            "port_name": "http",
            "project": "rustymaintenance",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rustymaintenance/global/backendServices/rmm-ui-service-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_region_network_endpoint_group.cloud_run_neg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.17.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-11-11T05:47:10.834-08:00",
            "id": "projects/rustymaintenance/global/addresses/cloud-sql-private-ip-range",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "cloud-sql-private-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/rustymaintenance/global/networks/default",
            "prefix_length": 16,
            "project": "rustymaintenance",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rustymaintenance/global/addresses/cloud-sql-private-ip-range"
          },
          "dependencies": [
            "google_project_service.service_networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/rustymaintenance/global/forwardingRules/rmm-ui-service-http-forwarding-rule",
            "ip_address": "136.110.151.193",
            "ip_protocol": "TCP",
            "ip_version": "IPV4",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "rmm-ui-service-http-forwarding-rule",
            "port_range": "80-80",
            "project": "rustymaintenance",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rustymaintenance/global/forwardingRules/rmm-ui-service-http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/rustymaintenance/global/targetHttpProxies/rmm-ui-service-http-proxy"
          },
          "dependencies": [
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/rustymaintenance/global/forwardingRules/rmm-ui-service-https-forwarding-rule",
            "ip_address": "34.13.124.115",
            "ip_protocol": "TCP",
            "ip_version": "IPV4",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "rmm-ui-service-https-forwarding-rule",
            "port_range": "443-443",
            "project": "rustymaintenance",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rustymaintenance/global/forwardingRules/rmm-ui-service-https-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/rustymaintenance/global/targetHttpsProxies/rmm-ui-service-https-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_managed_ssl_certificate.default",
            "google_compute_region_network_endpoint_group.cloud_run_neg",
            "google_compute_target_https_proxy.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-10T10:37:21.967-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/rustymaintenance/global/targetHttpProxies/rmm-ui-service-http-proxy",
            "name": "rmm-ui-service-http-proxy",
            "project": "rustymaintenance",
            "proxy_bind": false,
            "proxy_id": 1302395685374496270,
            "self_link": "https://www.googleapis.com/compute/v1/projects/rustymaintenance/global/targetHttpProxies/rmm-ui-service-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/rustymaintenance/global/urlMaps/rmm-ui-service-http-redirect"
          },
          "dependencies": [
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-10T10:41:07.426-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/rustymaintenance/global/targetHttpsProxies/rmm-ui-service-https-proxy",
            "name": "rmm-ui-service-https-proxy",
            "project": "rustymaintenance",
            "proxy_bind": false,
            "proxy_id": 6232115863042887468,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rustymaintenance/global/targetHttpsProxies/rmm-ui-service-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/rustymaintenance/global/sslCertificates/rustymaintenanceman-com-ssl-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/rustymaintenance/global/urlMaps/rmm-ui-service-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_managed_ssl_certificate.default",
            "google_compute_region_network_endpoint_group.cloud_run_neg",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-10T10:40:56.096-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/rustymaintenance/global/backendServices/rmm-ui-service-backend",
            "default_url_redirect": [],
            "description": "URL map for rmm-ui-service",
            "fingerprint": "RNGwaAxH2AU=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/rustymaintenance/global/urlMaps/rmm-ui-service-url-map",
            "map_id": 8056445170964467544,
            "name": "rmm-ui-service-url-map",
            "path_matcher": [],
            "project": "rustymaintenance",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rustymaintenance/global/urlMaps/rmm-ui-service-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_region_network_endpoint_group.cloud_run_neg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-10T10:37:10.730-08:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "vxtPcrUYV_g=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/rustymaintenance/global/urlMaps/rmm-ui-service-http-redirect",
            "map_id": 46020251241909817,
            "name": "rmm-ui-service-http-redirect",
            "path_matcher": [],
            "project": "rustymaintenance",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rustymaintenance/global/urlMaps/rmm-ui-service-http-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}